<resources>
    <string name="app_name">PetSaver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="texto_Bem_vindo_caso_necessite_de_ajuda">Caso necessite de ajuda com seu animal, clique no botão abaixo!</string>
    <string name="texto_bemVindo_venha_visitar_nosso_aplicativo">Venha visitar nosso aplicativo, explore todas as possibilidades!</string>
    <string name="button_bemVindo_primeiros_socorros">Primeiros Socorros</string>
    <string name="home">Home</string>
    <string name="exploreSubtituloHome">Explore</string>
    <string name="titulo_item_card">Como prevenir doenças em gatos?</string>
    <string name="chamada_item_card">Leia Agora como previnir…</string>
    <string name="voc_sabia">Você Sabia?</string>
    <string name="user_bottom_menu_item">User</string>
    <string name="sos_bottom_menu_item">Sos</string>
    <string name="pet_bottom_menu_item">Pet</string>
    <string name="home_bottom_menu_item">Home</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="configuracoesdeperfil">Configurações de perfil</string>
    <string name="facaagoraseulogin">Faça agora seu login!</string>
    <string name="login">Login</string>
    <string name="subtitulo_login_3">Seja bem vindo de volta, digite seu email e senha para continuar!</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="entrar">Entrar</string>
    <string name="textoInformativoTelaLogin">Ainda não tem uma conta?</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="facaagoraseucadastro">Faça agora seu cadastro!</string>
    <string name="nome_completo">Nome completo</string>
    <string name="nome">Nome</string>
    <string name="nascimento">Nascimento</string>
    <string name="selecione">Selecione</string>
    <string name="cep">CEP</string>
    <string name="riodejaneiro">Rio de Janeiro</string>
    <string name="Endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="estado">Estado</string>
    <string name="complemento">Complemento</string>
    <string name="casa">Casa</string>
    <string name="proximo">Próximo</string>
    <string name="digiteseumelhoremail">Digite seu melhor email</string>
    <string name="digiteseuemailnovamente">Digite seu email novamente</string>
    <string name="criesuasenha">Crie sua senha</string>
    <string name="confirmesuasenha">Confirme sua senha</string>
    <string name="primeirocheckboxcadastrousuario">Concordo em receber as novidades da PetSaver.</string>
    <string name="segundocheckboxcadastrousuario">Concordo em receber as notificações sobre a vacinação do meu pet.</string>
    <string name="junteseanos">Junte-se a nós</string>
    <string name="CPF">CPF</string>
    <string name="logout">Logout</string>
    <string name="botao_sair">botao sair</string>
    <string name="nome_usuario">Nome Usuario</string>
    <string name="cidade">Cidade</string>
    <string name="meus_pets">Meus Pets</string>
    <string name="numero_pets">0</string>
    <string name="sua_carteira_pet">Sua Carteira Pet</string>
    <string name="configurar_perfil">Configurar Perfil</string>
</resources>