<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.fragments.CadastroUsuarioSegundaTelaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fundo_quadrado_bordas_arredondados">

        <TextView
            android:id="@+id/titulo_tela_cadastro_usuario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/facaagoraseucadastro"
            android:textColor="@color/mid_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_sair_tela_login2"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/left_arrow"
            android:backgroundTint="@color/dark_grey"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitulo_cadastro_usuario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/cadastrese"
            android:textColor="@color/dark_grey"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo_tela_cadastro_usuario2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout_cadastro_usuario2"
            style="Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/grey"
            android:drawableStart="@drawable/ic_login_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/mid_grey"
            app:boxStrokeColor="@color/mid_grey"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitulo_cadastro_usuario2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_editText_cadastro_usuario2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:drawableStart="@drawable/ic_login_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/mid_grey"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColorHint="@color/mid_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_novamente__layout_cadastro_usuario2"
            style="Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/grey"
            android:drawableStart="@drawable/ic_login_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/mid_grey"
            app:boxStrokeColor="@color/mid_grey"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout_cadastro_usuario2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_novamente__editText_cadastro_usuario2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:drawableStart="@drawable/ic_login_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/mid_grey"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/digiteseuemailnovamente"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColorHint="@color/mid_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_login_senha2"
            style="Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/grey"
            android:drawableStart="@drawable/ic_login_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/mid_grey"
            app:boxStrokeColor="@color/mid_grey"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_novamente__layout_cadastro_usuario2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editeText_login_senha2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:drawableStart="@drawable/ic_login_senha"
                android:drawablePadding="10dp"
                android:drawableTint="@color/mid_grey"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/senha"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColorHint="@color/mid_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_senha_novamente_cadastro_usuario2"
            style="Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/grey"
            android:drawableStart="@drawable/ic_login_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/mid_grey"
            app:boxStrokeColor="@color/mid_grey"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_login_senha2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/senha_novamente_cadastro_usuario2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:drawableStart="@drawable/ic_login_senha"
                android:drawablePadding="10dp"
                android:drawableTint="@color/mid_grey"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/confirmesuasenha"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColorHint="@color/mid_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/receber_novidades_cadastro_usuario2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/primeirocheckboxcadastrousuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_senha_novamente_cadastro_usuario2" />

        <CheckBox
            android:id="@+id/concordo_receber_notificacoes_cadastro_usuaio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/segundocheckboxcadastrousuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receber_novidades_cadastro_usuario2" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_juntese_nos_tela_cadastro_usuario2"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="55dp"
            android:background="@drawable/background_input_text"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/inter_medium"
            android:text="@string/junteseanos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="8"
            android:textSize="18sp"
            app:backgroundTint="@color/blue"
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoPoliticaPrivacidade"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textoPoliticaPrivacidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/facaagoraseucadastro"
            android:textColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/concordo_receber_notificacoes_cadastro_usuaio2" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>


